--- a/assets/css/_charts.css
+++ b/assets/css/_charts.css
@@ -3,6 +3,7 @@
   border-radius: var(--border-radius);
   width: 100%;
   margin-left: 0%;
+  /* padding: 15px 0 0 40%; */
   padding: 15px 0;
   box-shadow: none !important;
 }
