--- a/assets/css/backup/_general.css
+++ b/assets/css/backup/_general.css
@@ -59,7 +59,7 @@ body.ajaxloading .sidesettings {
 	border-top-left-radius: 24px;
 	border-top-right-radius: 24px;
 	padding: 0 24px;
-	/* margin-bottom: 30px; */
+	margin-bottom: 30px;
 	width: 100%;
 	box-shadow: 0 -5px 6px -2px rgb(0 0 0 / 10%);
   -webkit-box-shadow: 0 -5px 6px -2px rgb(0 0 0 / 10%);
