--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,78 +167,78 @@ TABLE OF CONTENTS:
 
 @import url("variables.css");
 
-@import url("_general.css");
-@import url("_preloader.css");
-@import url("_ui.css");
-@import url("_datepicker.css");
-@import url("_timepicker.css");
-@import url("_carousel.css");
-@import url("_carousel-home-screen.css");
-@import url("_slider.css");
-@import url("_testimonials.css");
-@import url("_floating-action.css");
-@import url("_tooltips.css");
-@import url("_buttons.css");
-@import url("_badges.css");
-@import url("_blockquotes.css");
-@import url("_pagination.css");
-@import url("_spinners.css");
-@import url("_accordion.css");
-@import url("_waves.css");
-@import url("_modal.css");
-@import url("_topbar.css");
-@import url("_navigation.css");
+@import url("general.css");
+@import url("preloader.css");
+@import url("ui.css");
+@import url("datepicker.css");
+@import url("timepicker.css");
+@import url("carousel.css");
+@import url("carousel-home-screen.css");
+@import url("slider.css");
+@import url("testimonials.css");
+@import url("floating-action.css");
+@import url("tooltips.css");
+@import url("buttons.css");
+@import url("badges.css");
+@import url("blockquotes.css");
+@import url("pagination.css");
+@import url("spinners.css");
+@import url("accordion.css");
+@import url("waves.css");
+@import url("modal.css");
+@import url("topbar.css");
+@import url("navigation.css");
 /* @import url("_navigation-centered.css"); */
-@import url("_navigation-dark.css");
-@import url("_navigation-colored.css");
-@import url("_subpages.css");
-@import url("_footer.css");
-@import url("_footer-light.css");
-@import url("_footer-colored.css");
-@import url("_footer-minimal.css");
-@import url("_dropdown.css");
-@import url("_collection.css");
-@import url("_progress.css");
-@import url("_backtotop.css");
-@import url("_cards.css");
-@import url("_tabs.css");
-@import url("_iconboxes.css");
-@import url("_chips.css");
-@import url("_form-range-sliders.css");
-@import url("_switches.css");
-@import url("_form-elements.css");
-@import url("_settings.css");
-@import url("_parallax.css");
-@import url("_chat.css");
-@import url("_calendar.css");
-@import url("_events.css");
-@import url("_mailbox.css");
-@import url("_profile.css");
-@import url("_timeline.css");
-@import url("_portfolio.css");
-@import url("_blogs.css");
-@import url("_products.css");
-@import url("_login.css");
-@import url("_welcome.css");
-@import url("_error.css");
-@import url("_search.css");
-@import url("_pricing.css");
-@import url("_invoice.css");
-@import url("_notifications.css");
-@import url("_profile-edit.css");
-@import url("_app-settings.css");
-@import url("_clients.css");
-@import url("_fixed-footer-menu.css");
-@import url("_perfect-scrollbar.css");
-@import url("_tables.css");
-@import url("_contactus.css");
-@import url("_fancybox.css");
-@import url("_image-filter.css");
-@import url("_shadow.css");
-@import url("_team.css");
-@import url("_charts.css");
-@import url("_activity.css");
-@import url("_page-heading.css");
-@import url("_actions.css");
-@import url("_menu-effect.css");
-@import url("_site-darkmode.css");
+@import url("navigation-dark.css");
+@import url("navigation-colored.css");
+@import url("subpages.css");
+@import url("footer.css");
+@import url("footer-light.css");
+@import url("footer-colored.css");
+@import url("footer-minimal.css");
+@import url("dropdown.css");
+@import url("collection.css");
+@import url("progress.css");
+@import url("backtotop.css");
+@import url("cards.css");
+@import url("tabs.css");
+@import url("iconboxes.css");
+@import url("chips.css");
+@import url("form-range-sliders.css");
+@import url("switches.css");
+@import url("form-elements.css");
+@import url("settings.css");
+@import url("parallax.css");
+@import url("chat.css");
+@import url("calendar.css");
+@import url("events.css");
+@import url("mailbox.css");
+@import url("profile.css");
+@import url("timeline.css");
+@import url("portfolio.css");
+@import url("blogs.css");
+@import url("products.css");
+@import url("login.css");
+@import url("welcome.css");
+@import url("error.css");
+@import url("search.css");
+@import url("pricing.css");
+@import url("invoice.css");
+@import url("notifications.css");
+@import url("profile-edit.css");
+@import url("app-settings.css");
+@import url("clients.css");
+@import url("fixed-footer-menu.css");
+@import url("perfect-scrollbar.css");
+@import url("tables.css");
+@import url("contactus.css");
+@import url("fancybox.css");
+@import url("image-filter.css");
+@import url("shadow.css");
+@import url("team.css");
+@import url("charts.css");
+@import url("activity.css");
+@import url("page-heading.css");
+@import url("actions.css");
+@import url("menu-effect.css");
+@import url("site-darkmode.css");
