--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,80 +165,80 @@ TABLE OF CONTENTS:
 /* @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,600"); */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto&display=swap');
 
-@import url("variables.css");
+@import url("./variables.css");
 
-@import url("general.css");
-@import url("preloader.css");
-@import url("ui.css");
-@import url("datepicker.css");
-@import url("timepicker.css");
-@import url("carousel.css");
-@import url("carousel-home-screen.css");
-@import url("slider.css");
-@import url("testimonials.css");
-@import url("floating-action.css");
-@import url("tooltips.css");
-@import url("buttons.css");
-@import url("badges.css");
-@import url("blockquotes.css");
-@import url("pagination.css");
-@import url("spinners.css");
-@import url("accordion.css");
-@import url("waves.css");
-@import url("modal.css");
-@import url("topbar.css");
-@import url("navigation.css");
+@import url("./general.css");
+@import url("./preloader.css");
+@import url("./ui.css");
+@import url("./datepicker.css");
+@import url("./timepicker.css");
+@import url("./carousel.css");
+@import url("./carousel-home-screen.css");
+@import url("./slider.css");
+@import url("./testimonials.css");
+@import url("./floating-action.css");
+@import url("./tooltips.css");
+@import url("./buttons.css");
+@import url("./badges.css");
+@import url("./blockquotes.css");
+@import url("./pagination.css");
+@import url("./spinners.css");
+@import url("./accordion.css");
+@import url("./waves.css");
+@import url("./modal.css");
+@import url("./topbar.css");
+@import url("./navigation.css");
 /* @import url("_navigation-centered.css"); */
-@import url("navigation-dark.css");
-@import url("navigation-colored.css");
-@import url("subpages.css");
-@import url("footer.css");
-@import url("footer-light.css");
-@import url("footer-colored.css");
-@import url("footer-minimal.css");
-@import url("dropdown.css");
-@import url("collection.css");
-@import url("progress.css");
-@import url("backtotop.css");
-@import url("cards.css");
-@import url("tabs.css");
-@import url("iconboxes.css");
-@import url("chips.css");
-@import url("form-range-sliders.css");
-@import url("switches.css");
-@import url("form-elements.css");
-@import url("settings.css");
-@import url("parallax.css");
-@import url("chat.css");
-@import url("calendar.css");
-@import url("events.css");
-@import url("mailbox.css");
-@import url("profile.css");
-@import url("timeline.css");
-@import url("portfolio.css");
-@import url("blogs.css");
-@import url("products.css");
-@import url("login.css");
-@import url("welcome.css");
-@import url("error.css");
-@import url("search.css");
-@import url("pricing.css");
-@import url("invoice.css");
-@import url("notifications.css");
-@import url("profile-edit.css");
-@import url("app-settings.css");
-@import url("clients.css");
-@import url("fixed-footer-menu.css");
-@import url("perfect-scrollbar.css");
-@import url("tables.css");
-@import url("contactus.css");
-@import url("fancybox.css");
-@import url("image-filter.css");
-@import url("shadow.css");
-@import url("team.css");
-@import url("charts.css");
-@import url("activity.css");
-@import url("page-heading.css");
-@import url("actions.css");
-@import url("menu-effect.css");
-@import url("site-darkmode.css");
+@import url("./navigation-dark.css");
+@import url("./navigation-colored.css");
+@import url("./subpages.css");
+@import url("./footer.css");
+@import url("./footer-light.css");
+@import url("./footer-colored.css");
+@import url("./footer-minimal.css");
+@import url("./dropdown.css");
+@import url("./collection.css");
+@import url("./progress.css");
+@import url("./backtotop.css");
+@import url("./cards.css");
+@import url("./tabs.css");
+@import url("./iconboxes.css");
+@import url("./chips.css");
+@import url("./form-range-sliders.css");
+@import url("./switches.css");
+@import url("./form-elements.css");
+@import url("./settings.css");
+@import url("./parallax.css");
+@import url("./chat.css");
+@import url("./calendar.css");
+@import url("./events.css");
+@import url("./mailbox.css");
+@import url("./profile.css");
+@import url("./timeline.css");
+@import url("./portfolio.css");
+@import url("./blogs.css");
+@import url("./products.css");
+@import url("./login.css");
+@import url("./welcome.css");
+@import url("./error.css");
+@import url("./search.css");
+@import url("./pricing.css");
+@import url("./invoice.css");
+@import url("./notifications.css");
+@import url("./profile-edit.css");
+@import url("./app-settings.css");
+@import url("./clients.css");
+@import url("./fixed-footer-menu.css");
+@import url("./perfect-scrollbar.css");
+@import url("./tables.css");
+@import url("./contactus.css");
+@import url("./fancybox.css");
+@import url("./image-filter.css");
+@import url("./shadow.css");
+@import url("./team.css");
+@import url("./charts.css");
+@import url("./activity.css");
+@import url("./page-heading.css");
+@import url("./actions.css");
+@import url("./menu-effect.css");
+@import url("./site-darkmode.css");
